<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.meneses.maps.MainMaps"
    tools:showIn="@layout/activity_main_maps2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_chooseOption"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/trafficcontrol" />

        <Button
            android:id="@+id/traffic_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goto_trafficControl" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/timetableControl" />

        <Button
            android:id="@+id/timetable_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gotoTimetable" />

        <Button
            android:id="@+id/btn_addRotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:visibility="invisible"
            android:text="@string/addNewRoute" />

        <Button
            android:id="@+id/btn_viewRotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_viewRotas" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
